Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-52692

QLowEnergyService discoverDetails does not work for custom service

XMLWordPrintable

      QLowEnergyService::discoverDetails() works perfectly with known services like:
      "Generic Attribute"

      {00001801-0000-1000-8000-00805f9b34fb}

      "Generic Access"

      {00001800-0000-1000-8000-00805f9b34fb}

      but when I call this method on following service instance, the discovery will start, but never end ("service->discoverDetails();").

      The hardware (Cypress PSoC 4200 BLE) is ok, it works with CySmart.

        1. CySmart.png
          CySmart.png
          124 kB
        2. CySmartLog.csv
          2 kB
        3. main.cpp
          4 kB
        4. ProgrammLog
          1.0 kB
        5. PSoC Creator.png
          PSoC Creator.png
          66 kB
        6. qtbluetooth_hci_debug.diff
          4 kB
        7. Service General Access - work.log
          12 kB
        8. Service Healt Thermometer - dont work.log
          15 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            ablasche Alex Blasche
            adr Adrian
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: